--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "less-middleware": "~2.2.1",
+    "lodash": "^4.17.20",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1"
   }
