--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "json-web-token": "^3.2.0",
+    "jsonwebtoken": "^8.5.1",
     "less-middleware": "~2.2.1",
     "lodash": "^4.17.20",
     "morgan": "~1.9.1",
