--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PORT=4200
 
-DBNAME=trd-dev
+DBNAME=trademarkersweb
 DBUSER=root
-DBPASS=
+DBPASS=root
 DBHOST=localhost
 
 ACCESS_TOKEN_SECRET=swsh23hjddnns
