--- a/.env
+++ b/.env
@@ -5,6 +5,14 @@ DBUSER=root
 DBPASS=root
 DBHOST=localhost
 
+MongoURILOCAL2=mongodb://localhost:27017/trademarkersapp
+MongoURILOCAL=mongodb+srv://dbuser80:bigfoot1234@dcluster0.e2wld.mongodb.net/bigfoot?retryWrites=true&w=majority
+
+Options= { 
+        useNewUrlParser: true, 
+        useUnifiedTopology: true 
+    }
+
 ACCESS_TOKEN_SECRET=swsh23hjddnns
 ACCESS_TOKEN_LIFE=12000000000
 REFRESH_TOKEN_SECRET=dhw782wujnd99ahmmakhanjkajikhiwn2n
