--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 PORT=4200
 
 DBNAME=trademarkersweb
-DBUSER=root
-DBPASS=root
-DBHOST=localhost
+DBUSER=tmwebdba
+DBPASS=KaVGZ4XDxehv
+DBHOST=tmdevsql2.cnobnjjh1a2c.us-west-1.rds.amazonaws.com
 
 MongoURILOCAL2=mongodb://localhost:27017/trademarkersapp
 MongoURILOCAL=mongodb+srv://dbuser80:bigfoot1234@dcluster0.e2wld.mongodb.net/bigfoot?retryWrites=true&w=majority
