--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "bcrypt": "^5.0.0",
     "bootstrap": "^4.5.3",
     "bower": "^1.8.8",
+    "connect-mongo": "^3.2.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
