--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "dotenv": "^8.2.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.17.1",
+    "geoip-lite": "^1.4.2",
     "http-errors": "~1.6.3",
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
