--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bcrypt": "^5.0.0",
     "bootstrap": "^4.5.3",
     "bower": "^1.8.8",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -17,6 +18,7 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-ejs-layouts": "^2.5.0",
+    "express-flash-2": "^1.0.1",
     "express-session": "^1.17.1",
     "geoip-lite": "^1.4.2",
     "http-errors": "~1.6.3",
@@ -26,7 +28,8 @@
     "lodash": "^4.17.20",
     "mongoose": "^5.10.13",
     "morgan": "~1.9.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "nodemailer": "^6.4.16"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
