--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "blob-stream": "^0.1.3",
     "bootstrap": "^4.5.3",
     "bower": "^1.8.8",
     "connect-flash": "^0.1.1",
@@ -29,7 +30,8 @@
     "mongoose": "^5.10.13",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
-    "nodemailer": "^6.4.16"
+    "nodemailer": "^6.4.16",
+    "pdfkit": "^0.11.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
