--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "nodemailer": "^6.4.16",
+    "open": "^7.3.0",
     "pdfkit": "^0.11.0"
   },
   "devDependencies": {
