--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "ejs": "~2.6.1",
-    "express": "~4.16.1",
+    "express": "^4.16.4",
     "express-ejs-layouts": "^2.5.0",
     "express-flash-2": "^1.0.1",
     "express-session": "^1.17.1",
@@ -34,7 +34,9 @@
     "mysql": "^2.18.1",
     "nodemailer": "^6.4.16",
     "open": "^7.3.0",
-    "pdfkit": "^0.11.0"
+    "pdfkit": "^0.11.0",
+    "socket.io": "^3.0.4",
+    "socketio-jwt": "^4.6.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
