--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^5.10.13",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
+    "node-cron": "^2.0.3",
     "nodemailer": "^6.4.16",
     "open": "^7.3.0",
     "pdfkit": "^0.11.0",
