--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ejs": "~2.6.1",
     "express": "^4.16.4",
     "express-ejs-layouts": "^2.5.0",
+    "express-fileupload": "^1.2.1",
     "express-flash-2": "^1.0.1",
     "express-session": "^1.17.1",
     "formidable": "^1.2.2",
@@ -31,6 +32,7 @@
     "moment": "^2.29.1",
     "mongoose": "^5.10.13",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "node-cron": "^2.0.3",
     "nodemailer": "^6.4.16",
