--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "nodemailer": "^6.4.16",
     "open": "^7.3.0",
     "pdfkit": "^0.11.0",
+    "puppeteer": "^5.5.0",
     "socket.io": "^3.0.4",
     "socketio-jwt": "^4.6.2",
     "stripe": "^8.131.0"
