--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "connect-mongo": "^3.2.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "deep-email-validator": "^0.1.18",
     "dotenv": "^8.2.0",
     "ejs": "~2.6.1",
     "express": "^4.16.4",
