--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "formidable": "^1.2.2",
     "geoip-lite": "^1.4.2",
     "http-errors": "~1.6.3",
+    "imagemagick": "^0.1.3",
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
     "less-middleware": "~2.2.1",
@@ -36,8 +37,14 @@
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "node-cron": "^2.0.3",
+    "node-downloader-helper": "^1.0.17",
     "nodemailer": "^6.4.16",
     "open": "^7.3.0",
+    "pdf-image": "^2.0.0",
+    "pdf-img-convert": "^1.0.3",
+    "pdf2image": "^1.2.3",
+    "pdf2img": "^0.5.0",
+    "pdf2png-mp2": "^1.0.3",
     "pdfkit": "^0.11.0",
     "socket.io": "^3.0.4",
     "socketio-jwt": "^4.6.2",
