--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "pdf2img": "^0.5.0",
     "pdf2png-mp2": "^1.0.3",
     "pdfkit": "^0.11.0",
+    "puppeteer": "^7.1.0",
     "socket.io": "^3.0.4",
     "socketio-jwt": "^4.6.2",
     "stripe": "^8.131.0"
