update env test

--- a/.env-test
+++ b/.env-test
@@ -1,5 +1,54 @@
-PORT=4200
+PORT=8080
 
+DBNAME=trademarkersweb
+DBUSER=tmwebdba
+DBPASS=KaVGZ4XDxehv
+DBHOST=tmsql01.cnobnjjh1a2c.us-west-1.rds.amazonaws.com
+
+MongoURILOCAL=mongodb+srv://oven:dakugtiil1234@cluster0.ibirg.mongodb.net/bigfoot?retryWrites=true&w=majority
+#MongoURILOCAL=mongodb+srv://dbuser80:bigfoot1234@dcluster0.e2wld.mongodb.net/bigfoot?retryWrites=true&w=majority
+
+ACCESS_TOKEN_SECRET=swsh23hjddnns
+ACCESS_TOKEN_LIFE=1200
+REFRESH_TOKEN_SECRET=dhw782wujnd99ahmmakhanjkajikhiwn2n
+REFRESH_TOKEN_LIFE=86400
+ACCESS_TOKEN_EXPIRES="1h"
+
+JWT_SECRET=B1Bbr8EnAdJASz3l7Wl0U69f4UHsdtDX
+
+TBLEXT=tm_
+ENVIRONMENT=dev
+
+
+#MAIL_DRIVER=smtp
+#MAIL_HOST=smtp.sendgrid.net
+#MAIL_PORT=465
+#MAIL_USERNAME=apikey
+#MAIL_PASSWORD=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
+
+#MAIL_DRIVER=smtp
+#MAIL_HOST=smtp.mailtrap.io
+#MAIL_PORT=2525
+#MAIL_USERNAME=078cad53d0b4bc
+#MAIL_PASSWORD=0c5bf87494e7a4
+
+MAIL_USERNAME=info@trademarkers.net
+#MAIL_PASSWORD=bavheqksglhosldn
+#MAIL_PASSWORD=dakogtiil888!
+MAIL_PASSWORD=dakogtiil888!
+
+bavheqksglhosldn
+
+MAIL_FROM= 'Trademarkers LLC <info@trademarkers.net>'
+#MAIL_TO= mgleiss@bigfoot.com
+MAIL_TO= info@trademarkers.net
+
+APP_URL= http://localhost:4200
+APP_URL_PHP= http://trademarkers.staging.test
+
+PAY=sk_live_22xwrVdLHpDFZzJ0goISCycg003nAJraSf
+PAYTEST=sk_test_SQS2O0l8gEgNu7GOfqIuOQ2O00tSilc0Rq
+PAYK=pk_test_8IWnZ5BFL6cRN27ZARs8qB9Q00PET9ihlr
 
 
 uploadFilePath=/var/www/trademarkers-node/public/uploads/
