--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-session": "^1.17.1",
     "formidable": "^1.2.2",
     "geoip-lite": "^1.4.2",
+    "html-pdf": "^3.0.1",
     "http-errors": "~1.6.3",
     "imagemagick": "^0.1.3",
     "jquery": "^3.5.1",
