--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "start": "node --max_old_space_size=4096 ./bin/www",
+    "dev": "nodemon --max_old_space_size=4096 ./bin/www"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
