--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "sitemap": "^7.0.0",
     "socket.io": "^3.1.2",
     "socketio-jwt": "^4.6.2",
+    "store": "^2.0.12",
     "stream": "0.0.2",
     "stripe": "^8.137.0",
     "zlib": "^1.0.5"
